<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddEditEntryActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutElement"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/labelElement"
        android:textColorHint="?attr/colorOnSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_light"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/labelDay"
        android:textColorHint="?attr/colorOnSecondary">

        <AutoCompleteTextView
            android:id="@+id/dropDownMenuDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_light"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstWeek"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/startWeekNumber"
            android:textColorHint="?attr/colorOnSecondary"
            app:counterMaxLength="2"
            app:helperText="@string/minMaxValueWeek">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_light"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLastWeek"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/endWeekNumber"
            android:textColorHint="?attr/colorOnSecondary"
            app:counterMaxLength="2"
            app:helperText="@string/minMaxValueWeek">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_light"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/labelType"
        android:textColorHint="?attr/colorOnSecondary">

        <AutoCompleteTextView
            android:id="@+id/dropDownMenuType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_light"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutStartTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/startTime"
        android:textColorHint="?attr/colorOnSecondary"
        app:helperText="@string/timeFormat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_light"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDuration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/labelDuration"
        android:textColorHint="?attr/colorOnSecondary"
        app:counterMaxLength="1"
        app:helperText="@string/durationFormat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_light"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_entry_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/oswald_regular"
        android:text="@string/save_entry"
        android:textAllCaps="true" />

</androidx.appcompat.widget.LinearLayoutCompat>