<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayFetchingData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/welcomeTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/oswald_regular"
            android:text="@string/greeting"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTxtView">

            <TextView
                android:id="@+id/fill_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_light"
                android:text="@string/fill_field"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDays"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:hint="@string/labelDay"
                android:textColorHint="?attr/colorOnSecondary">

                <AutoCompleteTextView
                    android:id="@+id/dropDownMenuDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald_light"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutWeeks"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/week"
                android:textColorHint="?attr/colorOnSecondary">

                <AutoCompleteTextView
                    android:id="@+id/dropDownMenuWeeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald_light"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/oswald_regular"
                android:onClick="submitOnClickMethod"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:iconGravity="textEnd" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relLayParentSetup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/your_name"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="?attr/colorOnSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_light"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/entryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/entriesDescription"
            android:paddingTop="10dp"
            tools:listitem="@layout/entry_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/primaryLightColor"
            android:contentDescription="@string/fab_content_desc"
            android:tint="@color/primaryTextColor"
            app:srcCompat="@drawable/ic_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/primaryLightColor"
            android:contentDescription="@string/fabConfirm"
            android:tint="@color/primaryTextColor"
            app:srcCompat="@drawable/ic_check" />

        <TextView
            android:id="@+id/editEntriesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutName"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/oswald_regular"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/entries"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/entriesDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editEntriesTitle"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/oswald_light"
            android:justificationMode="inter_word"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/entries_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>